--- a/client/src/components/Admin/AdminParts/AdminPartDetails.css
+++ b/client/src/components/Admin/AdminParts/AdminPartDetails.css
@@ -1,20 +1,11 @@
-
-/* body{
-    /* background-color: #f9f9f9; */
-    /* width: 100%; */
-    /* height: 100%; */
-    /* align-content: center; */
-/* } */ 
-
-.admin-part-details{
+/* Admin Part Details Styles */
+.admin-part-details {
     padding: 20px;
-    background-color: white;
+    background-color: #ffffff;
+    /* Neutral Color 1: White */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 100%;
-    height: 100%; */
-   
 }
 
 /* Image upload box with a plus sign */
@@ -33,6 +24,7 @@
 .plus-sign {
     font-size: 50px;
     color: #ccc;
+    /* Light Gray */
 }
 
 .image-upload-box img {
@@ -65,24 +57,30 @@
 
 .admin-part-details button {
     padding: 10px 20px;
-    background-color: rgb(255, 136, 0);
-    color: white;
+    background-color: #ff8800;
+    /* Accent Color 1: Bright Orange */
+    color: #ffffff;
+    /* Neutral Color 1: White */
     border: none;
     border-radius: 5px;
     cursor: pointer;
     flex: 1;
+    transition: background-color 0.3s;
 }
 
 .admin-part-details button:hover {
-    background-color: rgb(255, 136, 0);
+    background-color: #ff7700;
+    /* Darker Orange */
 }
 
 .cancel-button {
     background-color: #dc3545;
+    /* Red */
 }
 
 .cancel-button:hover {
     background-color: #c82333;
+    /* Darker Red */
 }
 
 /* Responsive styles for smaller screens */
