--- a/client/src/components/UserProfile/UserProfile.css
+++ b/client/src/components/UserProfile/UserProfile.css
@@ -1,12 +1,15 @@
 /* Container Styling */
 .UPP {
   background-color: #e7f3fe;
+  /* Light Blue */
 }
+
 .UP-profile-container {
   width: 100%;
   max-width: 800px;
   margin: 50px auto;
-  background: var(--neutral-white);
+  background: #ffffff;
+  /* White */
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   padding: 40px;
   border-radius: 12px;
@@ -16,7 +19,8 @@
 /* Title Styling */
 .UP-profile-container h1 {
   font-size: 28px;
-  color: var(--primary-navy-blue);
+  color: rgb(14, 14, 83);
+  /* Navy Blue */
   margin-bottom: 30px;
   text-align: center;
   font-weight: 700;
@@ -39,7 +43,8 @@
 /* Label Styling */
 .UP-form-group label {
   font-size: 14px;
-  color: var(--accent-teal-blue);
+  color: #22577a;
+  /* Teal Blue */
   font-weight: 500;
 }
 
@@ -47,17 +52,21 @@
 .UP-form-group input {
   padding: 14px 16px;
   font-size: 16px;
-  border: 1px solid var(--accent-muted-blue);
+  border: 1px solid #8080ac;
+  /* Muted Blue */
   border-radius: 6px;
-  background-color: var(--neutral-light-gray);
+  background-color: #f2f2f2;
+  /* Light Gray */
   transition: all 0.3s;
 }
 
 .UP-form-group input:focus {
-  border-color: var(--primary-navy-blue);
+  border-color: rgb(14, 14, 83);
+  /* Navy Blue */
   box-shadow: 0 0 8px rgba(14, 14, 83, 0.2);
   outline: none;
-  background-color: var(--neutral-white);
+  background-color: #ffffff;
+  /* White */
 }
 
 /* Button Styling */
@@ -65,8 +74,10 @@
   padding: 16px 0;
   font-size: 16px;
   font-weight: 600;
-  color: var(--neutral-white);
-  background-color: var(--accent-bright-orange);
+  color: #ffffff;
+  /* White */
+  background-color: #ff8800;
+  /* Bright Orange */
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -76,6 +87,7 @@
 
 .UP-profile-container button:hover {
   background-color: #e65225;
+  /* Darker shade for hover */
   box-shadow: 0 5px 20px rgba(255, 136, 0, 0.3);
 }
 
@@ -84,12 +96,14 @@
   margin-top: 20px;
   font-size: 14px;
   color: #27ae60;
+  /* Success Green */
   text-align: center;
 }
 
 /* Error Message Styling */
 .UP-message.error {
   color: #e74c3c;
+  /* Error Red */
 }
 
 /* Responsive Styles */
@@ -107,14 +121,3 @@
     padding: 14px 0;
   }
 }
-
-/* CSS Variables for the color palette */
-/* :root {
-    --primary-navy-blue: rgb(14, 14, 83);
-    --secondary-light-blue: #e7f3fe;
-    --accent-bright-orange: #ff8800;
-    --accent-teal-blue: #22577a;
-    --neutral-white: #ffffff;
-    --neutral-light-gray: #f2f2f2;
-    --accent-muted-blue: #8080ac;
-} */
