--- a/client/src/components/Admin/AdminServiceRequestManagement/AdminServiceRequestManagement.css
+++ b/client/src/components/Admin/AdminServiceRequestManagement/AdminServiceRequestManagement.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
 }
 
 .asrm-container {
@@ -12,6 +12,7 @@ body {
   padding: 20px;
   padding-left: 270px;
   flex-grow: 1;
+  min-height: 100vh;
 }
 
 /* Top Navigation Bar */
@@ -105,7 +106,6 @@ button:focus {
   margin-bottom: 20px;
 }
 
-
 .asrm-table td {
   border: 1px solid #ccc;
   padding: 16px;
@@ -120,12 +120,12 @@ button:focus {
   /* Primary Color */
   color: white;
   font-weight: bold;
-  
+
   border: 1px solid #ccc;
-    padding: 16px;
-    /* Increased padding for better readability */
-    text-align: left;
-    font-size: 14px;
+  padding: 16px;
+  /* Increased padding for better readability */
+  text-align: left;
+  font-size: 14px;
 }
 
 .asrm-table tr:nth-child(even) {
@@ -169,14 +169,14 @@ button:focus {
 
 /* Arrow Icons for Pagination */
 .pagination .prev::before {
-  content: '←';
+  content: "←";
   /* Left Arrow */
   font-size: 16px;
   margin-right: 5px;
 }
 
 .pagination .next::after {
-  content: '→';
+  content: "→";
   /* Right Arrow */
   font-size: 16px;
   margin-left: 5px;
@@ -184,6 +184,9 @@ button:focus {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
+  .asrm-container {
+    min-width: 100vw;
+  }
   .top-navigation {
     flex-direction: column;
     align-items: flex-start;
