--- a/client/src/components/SearchItems/PartDetails.css
+++ b/client/src/components/SearchItems/PartDetails.css
@@ -31,68 +31,69 @@
 
 /* Part details container styling */
 .part-details-container {
-    display: flex;
-    flex-direction: column;
-    padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  background-color: white;
+  min-height: 80vh;
 }
 
 /* Image section styling */
 .part-image-section {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .part-image-details {
-    width: 300px;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Info section styling */
 .part-info-section {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    /* Center text */
-    flex: 1;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  /* Center text */
+  flex: 1;
 }
 
 /* Title styling */
 .part-info-section h1 {
-    font-size: 28px;
-    color: rgb(14, 14, 83);
-    margin-bottom: 10px;
+  font-size: 28px;
+  color: rgb(14, 14, 83);
+  margin-bottom: 10px;
 }
 
 /* Text styling */
 .part-info-section p {
-    font-size: 16px;
-    color: #333;
-    margin: 5px 0;
+  font-size: 16px;
+  color: #333;
+  margin: 5px 0;
 }
 
 /* Button styling */
 .part-info-section button {
-    padding: 12px 20px;
-    background-color: rgb(255, 136, 0);
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
-    transition: background-color 0.3s;
+  padding: 12px 20px;
+  background-color: rgb(255, 136, 0);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+  transition: background-color 0.3s;
 }
 
 .part-info-section button:hover {
-    background-color: rgb(255, 115, 0);
+  background-color: rgb(255, 115, 0);
 }
 
 /* Contact Us box styling */
-
 
 /* .contactUs {
     padding: 20px;
