--- a/client/src/components/ServiceHistory/ServiceHistory.css
+++ b/client/src/components/ServiceHistory/ServiceHistory.css
@@ -1,49 +1,50 @@
 /* General Styles */
 .SH-service-history-page {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    /* padding: 20px; */
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  /* padding: 20px; */
 }
 
 .SH-service-history-container {
-    /* max-width: 800px; */
-    margin: auto;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+  /* max-width: 800px; */
+  margin: auto;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  min-height: 65vh;
 }
 
 .SH-service-history-list {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .SH-service-card {
-    background: #e7f3fe;
-    border-left: 5px solid #22577a;
-    border-radius: 4px;
-    margin: 15px 0;
-    padding: 15px;
-    transition: transform 0.2s;
+  background: #e7f3fe;
+  border-left: 5px solid #22577a;
+  border-radius: 4px;
+  margin: 15px 0;
+  padding: 15px;
+  transition: transform 0.2s;
 }
 
 .SH-service-card:hover {
-    transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 .SH-service-details p {
-    margin: 10px 0;
-    color: #333;
+  margin: 10px 0;
+  color: #333;
 }
 
 .SH-service-details span {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /* Responsive Styles */
 @media (max-width: 600px) {
-    .SH-service-history-container {
-        padding: 15px;
-    }
+  .SH-service-history-container {
+    padding: 15px;
+  }
 }
